--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,22 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="grey">#808080</color>
+    <color name="purple">#B39DDB</color>
+    <color name="pink">#F48FB1</color>
+    <color name="dark">#000000</color>
+    <color name="blue_normal">#00bfff</color>
+    <color name="blue_light">#6af2ff</color>
+    <color name="blue_dark">#008fcc</color>
+    <color name="orange">#FF9900</color>
+    <color name="green">#009900</color>
+    <color name="blue">#000099</color>
+    <color name="black">#000000</color>
+    <color name="red">#ff0000</color>
+    <color name="transparent">#00000000</color>
+    <color name="background_transparent">#99000000</color>
+    <color name="background_dialog">#80CBC4</color>
+    <color name="holo_blue">#33b5e5</color>
 </resources>
