--- a/app/src/main/res/layout/fragment_sof_users_list.xml
+++ b/app/src/main/res/layout/fragment_sof_users_list.xml
@@ -9,15 +9,14 @@
             type="com.ltdung.fossilsofchallenge.ui.main.list.SOFUsersListViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            app:layout_constraintTop_toTopOf="parent"
             android:id="@+id/usersRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 </layout>
