--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#CCCCCC</color>
+    <color name="colorPrimaryLight">#FFFFFF</color>
+    <color name="colorAccent">#663399</color>
 
     <color name="white">#FFFFFF</color>
     <color name="grey">#808080</color>
@@ -21,4 +22,5 @@
     <color name="background_transparent">#99000000</color>
     <color name="background_dialog">#80CBC4</color>
     <color name="holo_blue">#33b5e5</color>
+    <color name="gray">#ccc</color>
 </resources>
