--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="dark">#000000</color>
     <color name="blue_normal">#00bfff</color>
     <color name="blue_light">#6af2ff</color>
-    <color name="blue_dark">#008fcc</color>
+    <color name="blue_dark">#0079bf</color>
     <color name="orange">#FF9900</color>
     <color name="green">#009900</color>
     <color name="blue">#000099</color>
