--- a/app/src/main/res/drawable/gray_heart.xml
+++ b/app/src/main/res/drawable/gray_heart.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:height="@dimen/icon_size"
-    android:width="@dimen/icon_size"
+    android:height="@dimen/icon_mini_size"
+    android:width="@dimen/icon_mini_size"
     android:viewportHeight="100"
     android:viewportWidth="100" >
     <path
