--- a/app/src/main/res/layout/fragment_sof_users_list.xml
+++ b/app/src/main/res/layout/fragment_sof_users_list.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+        <import type="android.view.View"/>
         <variable
             name="viewModel"
             type="com.ltdung.fossilsofchallenge.ui.main.list.SOFUsersListViewModel" />
@@ -13,8 +14,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"
+            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"/>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/usersRecyclerView"
+            android:layout_marginTop="@dimen/default_margin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
