--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="icon_size">24sp</dimen>
+    <dimen name="icon_mini_size">20sp</dimen>
     <dimen name="tab_horizontal_spacing">16dp</dimen>
     <dimen name="tab_vertical_spacing">12dp</dimen>
     <dimen name="tab_height">48dp</dimen>
     <dimen name="tab_height_large">72dp</dimen>
+    <dimen name="avatar_size">72dp</dimen>
+    <dimen name="cardview_content_padding">8dp</dimen>
+    <dimen name="default_margin">8dp</dimen>
 </resources>
