Added bookmark functionality

--- a/app/src/main/res/layout/fragment_sof_users_list_bookmark.xml
+++ b/app/src/main/res/layout/fragment_sof_users_list_bookmark.xml
@@ -1,22 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View"/>
         <variable
             name="viewModel"
             type="com.ltdung.fossilsofchallenge.ui.main.bookmarklist.SOFUsersListBookMarkViewModel" />
     </data>
 
     <RelativeLayout
+        android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/hint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:textSize="18sp"
+            android:text="@string/bookmark_hint" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/bookMarkedUsersRecyclerView"
+            android:layout_marginTop="8dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/item_bookmarked_user"
+            android:scrollbars="vertical"
+            android:scrollbarThumbVertical="@drawable/scrollbar"/>
 
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="@dimen/progressbar_size"
+            android:layout_height="@dimen/progressbar_size"
+            android:layout_centerInParent="true"
+            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
+            />
     </RelativeLayout>
 </layout>
