--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="avatar_size">72dp</dimen>
     <dimen name="cardview_content_padding">8dp</dimen>
     <dimen name="default_margin">8dp</dimen>
+    <dimen name="progressbar_size">40dp</dimen>
 </resources>
