--- a/app/src/main/res/layout/fragment_sof_users_list.xml
+++ b/app/src/main/res/layout/fragment_sof_users_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
         <import type="android.view.View"/>
@@ -16,8 +16,8 @@
 
         <ProgressBar
             android:id="@+id/progressBar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="@dimen/progressbar_size"
+            android:layout_height="@dimen/progressbar_size"
             android:layout_centerInParent="true"
             android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"/>
 
@@ -25,7 +25,10 @@
             android:id="@+id/usersRecyclerView"
             android:layout_marginTop="@dimen/default_margin"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            tools:listitem="@layout/item_user"
+            android:scrollbars="vertical"
+            android:scrollbarThumbVertical="@drawable/scrollbar"/>
 
     </RelativeLayout>
 </layout>
