--- a/app/src/main/res/layout/item_bookmarked_user.xml
+++ b/app/src/main/res/layout/item_bookmarked_user.xml
@@ -16,7 +16,11 @@
         android:layout_margin="@dimen/default_margin"
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="5dp"
-        card_view:contentPadding="@dimen/cardview_content_padding">
+        card_view:contentPadding="@dimen/cardview_content_padding"
+        android:onClick="@{() -> viewModel.onItemClick()}"
+        android:foreground="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
